[gd_scene load_steps=3 format=3 uid="uid://cpj2hjk0om4so"]

[ext_resource type="Theme" uid="uid://bu1pjwr5kc5bw" path="res://MainMenu/main_menu.tres" id="1_3gk25"]
[ext_resource type="Script" path="res://MainMenu/options_menu_box.gd" id="1_hsr38"]

[node name="Options Menu Box" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -41.0
offset_right = 4.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 85
script = ExtResource("1_hsr38")

[node name="OptionsLabel" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("1_3gk25")
theme_override_font_sizes/font_size = 100
text = "OPTIONS"
horizontal_alignment = 1

[node name="VolumeBox" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4

[node name="VolumeLabel" type="Label" parent="VolumeBox"]
layout_mode = 2
theme = ExtResource("1_3gk25")
text = "VOLUME"

[node name="Volume" type="HSlider" parent="VolumeBox"]
layout_mode = 2
min_value = -20.0
max_value = 10.0

[node name="Back" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_3gk25")
text = "BACK"

[node name="DataWipeButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_3gk25")
text = "WIPE DATA"

[node name="MenuTheme" type="AudioStreamPlayer" parent="."]

[connection signal="value_changed" from="VolumeBox/Volume" to="." method="_on_volume_value_changed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="DataWipeButton" to="." method="_on_data_wipe_button_pressed"]
